# Neutr0nOs

./: CMakeLists.txt  README.md
include/: Calculator.h  Clock.h  FileManager.h  Snake.h  Usermenu.h
src/: Clock.cpp  Filemanager.cpp  Snake.cpp  Usermenu.cpp  main.cpp
